# norisk

./: .env.example  .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.py  cleanroom_launch.bat  license_compliance.py  pyproject.toml  requirements.txt  sign_tuner_catalog.py
apps/: __init__.py  app_config.py  assistant_findings.py  collector_main.py  norisk_app.py
build_specs/: build_norisk.spec
configs/link_profiles/: default.json
configs/rules/: api.yaml  cert.yaml  csaf.yaml  dependency.yaml  hardening.yaml  network.yaml  network_monitor.yaml  patch_monitor.yaml  supply_chain_monitor.yaml
core/: audit_log.py  base_tool.py  branding.py  config.py  console_encoding.py  constants.py  crash_handler.py  curated_links.py  deeplink_registry.py  dialogs.py  dock_mixin.py  elevation.py  escape.py  exceptions.py  feed_settings.py  finlai_paths.py  fonts.py  gdpr.py  guide_registry.py  hardening_query.py  hardware_fingerprint.py  help_button.py  herkunft.py  http_client.py  icons.py  link_profile_loader.py  links_repository.py  loading_overlay.py  logger.py  main_window.py  navigation_mixin.py  ollama_retry.py  ollama_utils.py  os_eol_resolver.py  os_info.py  patch_channel_resolver.py  patch_collector.py  patch_cpe.py  patch_custom_source.py  patch_cve_matcher.py  (+34 more)
core/assistant/: __init__.py  provider.py  rag_service.py  security_findings.py  unified_assistant_service.py
core/auth/: __init__.py  admin_panel.py  forgot_password_dialog.py  login_attempts.py  login_window.py  models.py  password_reset.py  password_setup_dialog.py  recovery_code.py  session.py  user_store.py
core/compliance/: __init__.py  kmu_priority.py  nis2_maturity.py  regulatory_mapping.py
core/data/: endoflife_product_map.json
core/database/: consolidation.py  db_check.py  db_context.py  encrypted_db.py  key_manager.py  key_manager_context.py  key_manager_platform.py  migrate_to_envelope.py  migration_backup.py  migration_bootstrap.py  migration_common.py  migration_dbs.py  migration_rawkey.py  migration_secure_store.py  migration_state.py  schema_utils.py
core/export/: __init__.py  base_exporter.py  export_actions.py
core/first_run_wizard/: __init__.py  trigger.py  wizard.py
core/guardrails/: __init__.py  corpus.py  guardrails.py  prompts.py  scope_classifier.py
core/help/: __init__.py  display_mode.py  display_mode_state.py  explain_mode.py  explainable_label.py  handbook_source.py  help_content.py  help_dialog.py  help_panel.py  help_registry.py  help_tooltip.py
core/ki_verzeichnis/: __init__.py  ki_verzeichnis_service.py
core/legal/: __init__.py  agreement_dialog.py  terms.py
core/llm/: __init__.py  llm_base.py  llm_config.py  llm_factory.py  llm_result.py  ollama_client.py  ollama_provider.py  ollama_types.py
core/pdf/: __init__.py  pdf_colors.py  pdf_components.py  pdf_fonts.py  pdf_light_colors.py  pdf_light_styles.py  pdf_report_builder.py  pdf_styles.py
core/probes/: __init__.py  hardening_probe.py  mock_hardening_probe.py  windows_hardening_probe.py
core/proc/: __init__.py  run_hidden.py
core/registry/: __init__.py  last_scan_registry.py
core/rules/: __init__.py  classifier.py  models.py  rule_engine.py
core/sbom_aibom/: __init__.py  ai_bom_service.py  sbom_service.py
core/scan_prefill/: __init__.py  models.py  ports.py  resolver.py
core/security/: RESIDUAL_RISKS.md  __init__.py  encryption.py  import_validator.py  magika_adapter.py  pdf_deep_scanner.py  severity.py  validation_report.py  validators.py  virustotal_client.py  yara_runner.py
core/security_subject/: __init__.py  models.py  ports.py  resolver.py  scoping_constants.py  w1_profil.py
core/storytelling/: __init__.py  channel_router.py  finding_templates.py  ki_todo_emitter.py  narrative_builder.py  schemas.py
core/tech_stack/: __init__.py  resolver.py
core/vulnerability/: __init__.py
core/widgets/: __init__.py  button_styles.py  crash_dialog.py  dock_title_bar.py  empty_state.py  error_placeholder.py  finlai_progress.py  frameless_shell.py  history_table_view.py  info_toast.py  ki_disclaimer.py  log_handler.py  neon_splitter.py  placeholder.py  section.py  secure_markdown_browser.py  title_bar.py  tool_page.py  welcome_toast.py
docs/: ANWENDERHANDBUCH_NORISK.md
requirements/: base.txt  norisk.txt
resources/security_corpus/: _meta.md  bsi_nist_grounding.md  deepfake_ceo_fraud.md  dsgvo_checkliste.md  mitre_atlas_angriffe.md  ollama_server_cves.md  owasp_llm_top10_2025.md  rtec_lagebericht_2025.md
resources/system_tuner/: NEVER_DISABLE.yaml  catalog_v1.yaml  catalog_v1.yaml.sig
resources/yara_rules/: norisk_document_scanner.yar
tests/: conftest.py  test_ai_bom_service.py  test_anomaly_alert_tab.py  test_anomaly_detector.py  test_anomaly_section_text.py  test_anomaly_worker.py  test_api_security_active_checks.py  test_api_security_checks.py  test_api_security_persistenz.py  test_apply_user_decline.py  test_archive_validator.py  test_assistant_findings.py  test_assistant_provider.py  test_audit_log.py  test_audit_prefill_steps.py  test_audit_score_integration.py  test_audit_step_widgets.py  test_audit_subject_backfill.py  test_audit_versioning.py  test_audit_wizard.py  test_avv_conformity.py  test_awareness_human_risk_service.py  test_awareness_tracker_csv_importer.py  test_awareness_tracker_csv_template.py  test_awareness_tracker_domain.py  test_awareness_tracker_ics_exporter.py  test_awareness_tracker_phishing_sim.py  test_awareness_tracker_renewal_banner.py  test_awareness_tracker_repository.py  test_awareness_tracker_service.py  test_awareness_tracker_tool.py  test_backup_audit_domain.py  test_backup_detector.py  test_bewerten_group_ia.py  test_bitlocker_compliance.py  test_bitlocker_inspector.py  test_briefing_guardrails.py  test_briefing_phishing_session.py  test_briefing_service_error_reason.py  test_button_styles.py  (+292 more)
tests/auth/: test_password_reset.py  test_recovery_code.py
tests/database/: conftest.py  test_migrate_to_envelope.py  test_migration_state.py
(+778 files in other folders)
